fix: ajuste na visibilidade dos componentes agendamedicamento

--- a/src/pages/AgendaMedicamento/AgendaMedicamento.css
+++ b/src/pages/AgendaMedicamento/AgendaMedicamento.css
@@ -54,8 +54,8 @@ body,
   max-height: 80vh;
   overflow-y: auto;
   padding-bottom: 100px;
-  margin-bottom: 20px;
-  margin-top: 100px;
+  margin-bottom: 50%;
+  margin-top: 35%;
   overflow-y: auto
 }
 
